<?xml version="1.0" encoding="utf-8"?>

<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context="com.fridgecow.smartalarm.MainActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.wear.widget.BoxInsetLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:boxedEdges="all">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round"
                        android:contentDescription="Play / Pause"
                        android:elevation="0dp"
                        android:scaleType="fitCenter"
                        android:src="@android:drawable/ic_media_play"
                        android:text="@string/button_start" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/button_reset"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round"
                        android:contentDescription="Reset / Stop"
                        android:elevation="0dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_cc_clear"
                        android:text="@string/button_reset" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/button_settings"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_round"
                        android:contentDescription="Settings"
                        android:elevation="0dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_settings"
                        android:text="@string/button_settings" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/graph_actions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graph"
                        android:layout_width="match_parent"
                        android:layout_height="100dip" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_export" />
                </LinearLayout>

                <TextView
                    android:id="@+id/nodata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/graph_no_data"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

        </android.support.wear.widget.BoxInsetLayout>

    </ScrollView>

</android.support.wear.widget.BoxInsetLayout>

