<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context="com.fridgecow.smartalarm.ChangelogActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:boxedEdges="all">

            <TextView
                android:id="@+id/onboarding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changelog_html"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Button
                android:id="@+id/changelog_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changelog_donetext" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>

